<resources>
    <string name="app_name">FirstApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_fixture_image_view_desc">Graph</string>
    <string name="activity_fixture_textview_detail">Details</string>
    <string name="activity_fixture_textview_created_on">Created On:</string>
    <string name="activity_fixture_textview_created_on_date">2017-050-09T19:34...</string>

    <string name="activity_fixture_textview_created_by">Created By:</string>
    <string name="activity_fixture_textview_created_by_user">TK-421</string>

    <string name="activity_fixture_textview_last_modified_on">Last Modified On:</string>
    <string name="activity_fixture_textview_last_modified_on_date">null</string>

    <string name="activity_fixture_textview_last_modified_by">Last Modified By:</string>
    <string name="activity_fixture_textview_last_modified_by_date">2017-050-09T19:34...</string>

    <string name="image_view_desc">Image</string>

    <string name="alert_three_dots_refresh">Refresh</string>
    <string name="alert_three_dots_connected_devices">Connected Devices</string>
    <string name="alert_three_dots_archieve">Archieve</string>
    <string name="alert_three_dots_notifications">Notifications</string>
    <string name="alert_three_dots_help_feedback">Help and Feedback</string>

    <string name="alert_popup_acknowledge">Acknowledge</string>
    <string name="alert_popup_add_notes">Add Note</string>
    <string name="alert_popup_delete">Delete</string>

    <string name="dialog_user_settings">User Settings</string>
    <string name="dialog_user_controls">User controls</string>
    <string name="dialog_content_filtering">Content Filtering</string>
    <string name="dialog_text_1">Set the content filtering level to restrict apps that can be downloaded</string>
    <string name="dialog_text_2">Require password for purchase or use password to restrict purchase</string>
    <string name="dialog_text_3">Notify me about updates to apps or games that I have downloaded</string>
    <string name="dialog_user_password">Password</string>
    <string name="dialog_user_general">General</string>

    <string name="fixture_edited_popup_dismiss">DISMISS</string>
    <string name="fragment_alert_select_all">Select All</string>

    <string name="email_required">Email Required</string>

    <string name="password_required">Password Required</string>

    <string name="desktop_alert_item_status">Ongoing</string>
    <string name="desktop_alert_item_delivery">4135243</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_fragment_disagree">DISAGREE</string>
    <string name="dialog_fragment_agree">AGREE</string>
    <string name="user_controls">User controls</string>
    <string name="items_updated">2 items updated</string>
    <string name="selected">selected</string>
    <string name="alerts">Alerts</string>
    <string name="products">Products</string>

    <string name="SERVER_IP">http://192.168.1.7:3000</string>
</resources>
