<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <ImageView
        android:contentDescription="@string/activity_fixture_image_view_desc"
        android:id="@+id/productMetric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/light_chart_3x"
        app:layout_constraintBottom_toTopOf="@+id/individualProductBottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/individualProductBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productMetric">

        <TextView
            android:id="@+id/detailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/activity_fixture_textview_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fixureDetailSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_settings_black_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detailTV"
            android:contentDescription="@string/activity_fixture_image_view_desc"/>

        <LinearLayout
            android:id="@+id/createdOnLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTV">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_on"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_on_date"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createdByLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/createdOnLL"
            app:layout_constraintTop_toBottomOf="@id/detailTV">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_by"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_by_user"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastModifiedOnLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/createdOnLL"
            app:layout_constraintTop_toBottomOf="@id/createdOnLL">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_last_modified_on"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_last_modified_on_date"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastModifiedByLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/createdByLL"
            app:layout_constraintTop_toBottomOf="@id/createdByLL">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_last_modified_by"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_last_modified_by_date"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createdOnDupLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/createdOnLL"
            app:layout_constraintTop_toBottomOf="@id/lastModifiedOnLL">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_on"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_on_date"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createdByDupLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/createdByLL"
            app:layout_constraintTop_toBottomOf="@id/lastModifiedByLL">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_by"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_fixture_textview_created_by_user"
                android:textSize="15sp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>